@@ -2,7 +2,7 @@
 
 #include "RT_Test_FilterFactory.h"
 
-ACE_RCSID(Notify, TAO_RT_Test_FilterFactory, "$id$")
+ACE_RCSID(Notify, TAO_RT_Test_FilterFactory, "$Id$")
 
 #include "RT_Test_Filter.h"
 #include "tao/debug.h"
