@@ -3,7 +3,7 @@
 
 #include "Command_Factory.h"
 
-ACE_RCSID(lib, TAO_Command_Factory, "$id$")
+ACE_RCSID(lib, TAO_Command_Factory, "$Id$")
 
 TAO_Notify_Tests_Command_Factory::TAO_Notify_Tests_Command_Factory (void)
 {
