@@ -8,7 +8,7 @@
 #include "Consumer_T.inl"
 #endif /* __ACE_INLINE__ */
 
-ACE_RCSID(Notify, TAO_Notify_Tests_Consumer_T, "$id$")
+ACE_RCSID(Notify, TAO_Notify_Tests_Consumer_T, "$Id$")
 
 template <class Consumer_Traits>
 TAO_Notify_Tests_Consumer_T<Consumer_Traits>::TAO_Notify_Tests_Consumer_T (void)
