@@ -3,7 +3,7 @@
 #include "Filter_Command.h"
 #include "ace/Log_Msg.h"
 
-ACE_RCSID(lib, TAO_Filter_Command, "$id$")
+ACE_RCSID(lib, TAO_Filter_Command, "$Id$")
 
 #include "LookupManager.h"
 #include "Name.h"
