@@ -9,7 +9,7 @@
 #include "Peer_T.inl"
 #endif /* __ACE_INLINE__ */
 
-ACE_RCSID(Notify, TAO_Notify_Tests_Peer_T, "$id$")
+ACE_RCSID(Notify, TAO_Notify_Tests_Peer_T, "$Id$")
 
 #include "ace/Arg_Shifter.h"
 #include "Name.h"
@@ -28,29 +28,29 @@ TAO_Notify_Tests_Peer_T<Peer_Traits>::~TAO_Notify_Tests_Peer_T ()
 {
 }
 
-template <class Peer_Traits> 
+template <class Peer_Traits>
 ACE_TYPENAME TAO_Notify_Tests_Peer_T<Peer_Traits>::Proxy_Traits_PTR
 TAO_Notify_Tests_Peer_T<Peer_Traits>::get_proxy (void)
 {
   return proxy_.in ();
 }
 
-template <class Peer_Traits> 
+template <class Peer_Traits>
 ACE_TYPENAME TAO_Notify_Tests_Peer_T<Peer_Traits>::Peer_Traits_PTR
 TAO_Notify_Tests_Peer_T<Peer_Traits>::activate (ACE_ENV_SINGLE_ARG_DECL)
 {
   return this->_this (ACE_ENV_SINGLE_ARG_PARAMETER);
 }
 
-template <class Peer_Traits> 
+template <class Peer_Traits>
 void
-TAO_Notify_Tests_Peer_T<Peer_Traits>::connect (Proxy_Traits_PTR proxy, 
-                                               Proxy_Traits_ID proxy_id 
+TAO_Notify_Tests_Peer_T<Peer_Traits>::connect (Proxy_Traits_PTR proxy,
+                                               Proxy_Traits_ID proxy_id
                                                ACE_ENV_ARG_DECL)
 {
   PortableServer::ServantBase_var servant_var (this);
 
-  ACE_TYPENAME Peer_Traits::VAR peer_var = 
+  ACE_TYPENAME Peer_Traits::VAR peer_var =
     this->activate (ACE_ENV_SINGLE_ARG_PARAMETER);
   ACE_CHECK;
 
@@ -63,63 +63,63 @@ TAO_Notify_Tests_Peer_T<Peer_Traits>::connect (Proxy_Traits_PTR proxy,
   // Register the proxy.
   if (this->proxy_name_.length () != 0)
     {
-      LOOKUP_MANAGER->_register (this->proxy_.in (), 
-                                 this->proxy_name_.c_str () 
+      LOOKUP_MANAGER->_register (this->proxy_.in (),
+                                 this->proxy_name_.c_str ()
                                  ACE_ENV_ARG_PARAMETER);
-   
+
       ACE_CHECK;
     }
 }
 
-template <class Peer_Traits> 
+template <class Peer_Traits>
 void
-TAO_Notify_Tests_Peer_T<Peer_Traits>::connect (Admin_Traits_PTR admin_ptr 
+TAO_Notify_Tests_Peer_T<Peer_Traits>::connect (Admin_Traits_PTR admin_ptr
                                                ACE_ENV_ARG_DECL)
 {
-  ACE_TYPENAME Proxy_Traits::VAR proxy_var = 
-    this->obtain_proxy (admin_ptr 
+  ACE_TYPENAME Proxy_Traits::VAR proxy_var =
+    this->obtain_proxy (admin_ptr
                         ACE_ENV_ARG_PARAMETER);
   ACE_CHECK;
 
   ACE_ASSERT (!CORBA::is_nil (proxy_var.in ()));
 
-  this->connect (proxy_var.in (), 
-                 this->proxy_id_  
+  this->connect (proxy_var.in (),
+                 this->proxy_id_
                  ACE_ENV_ARG_PARAMETER);
 }
 
 
-template <class Peer_Traits> 
+template <class Peer_Traits>
 void
 TAO_Notify_Tests_Peer_T<Peer_Traits>::connect (ACE_ENV_SINGLE_ARG_DECL)
 {
   // Get the POA
   PortableServer::POA_var poa;
-  LOOKUP_MANAGER->resolve (poa, 
-                           this->poa_name_.c_str () 
+  LOOKUP_MANAGER->resolve (poa,
+                           this->poa_name_.c_str ()
                            ACE_ENV_ARG_PARAMETER);
   ACE_CHECK;
 
   // set the POA
-  this->set_poa (poa.in () 
+  this->set_poa (poa.in ()
                  ACE_ENV_ARG_PARAMETER);
   ACE_CHECK;
 
   // Resolve the admin
   ACE_TYPENAME Admin_Traits::VAR admin_var;
 
-  LOOKUP_MANAGER->resolve (admin_var, 
-                           this->admin_name_.c_str () 
+  LOOKUP_MANAGER->resolve (admin_var,
+                           this->admin_name_.c_str ()
                            ACE_ENV_ARG_PARAMETER);
   ACE_CHECK;
 
   ACE_TYPENAME Admin_Ext_Traits::VAR admin_ext_var =
-    Admin_Ext_Traits_INTERFACE::_narrow (admin_var.in () 
+    Admin_Ext_Traits_INTERFACE::_narrow (admin_var.in ()
                                          ACE_ENV_ARG_PARAMETER);
   ACE_CHECK;
 
-  ACE_TYPENAME Proxy_Traits::VAR proxy_var = 
-    this->obtain_proxy (admin_ext_var.in (), 
+  ACE_TYPENAME Proxy_Traits::VAR proxy_var =
+    this->obtain_proxy (admin_ext_var.in (),
                         this->qos_
                         ACE_ENV_ARG_PARAMETER);
   ACE_CHECK;
@@ -128,16 +128,16 @@ TAO_Notify_Tests_Peer_T<Peer_Traits>::connect (ACE_ENV_SINGLE_ARG_DECL)
 
   // connect supplier to proxy,
   // also activates the servant as CORBA object in the POA specified.
-  this->connect (proxy_var.in (), 
-                 this->proxy_id_  
+  this->connect (proxy_var.in (),
+                 this->proxy_id_
                  ACE_ENV_ARG_PARAMETER);
   ACE_CHECK;
 }
 
-template <class Peer_Traits> 
+template <class Peer_Traits>
 void
 TAO_Notify_Tests_Peer_T<Peer_Traits>::set_qos (
-    CosNotification::QoSProperties& qos 
+    CosNotification::QoSProperties& qos
     ACE_ENV_ARG_DECL
   )
 {
@@ -145,26 +145,26 @@ TAO_Notify_Tests_Peer_T<Peer_Traits>::set_qos (
   ACE_CHECK;
 }
 
-template <class Peer_Traits> 
+template <class Peer_Traits>
 void
 TAO_Notify_Tests_Peer_T<Peer_Traits>::status (ACE_ENV_SINGLE_ARG_DECL)
 {
 #if (TAO_HAS_MINIMUM_CORBA == 0)
   ACE_TRY
     {
-      CORBA::Boolean not_exist = 
+      CORBA::Boolean not_exist =
         this->get_proxy ()->_non_existent (ACE_ENV_SINGLE_ARG_PARAMETER);
       ACE_TRY_CHECK;
 
       if (not_exist == 1)
         {
-          ACE_DEBUG ((LM_DEBUG, 
+          ACE_DEBUG ((LM_DEBUG,
                       "Peer %s, Proxy does not exist\n",
                       this->name_.c_str ()));
         }
       else
         {
-          ACE_DEBUG ((LM_DEBUG, 
+          ACE_DEBUG ((LM_DEBUG,
                       "Peer %s, Proxy exists\n",
                       this->name_.c_str ()));
         }
@@ -172,15 +172,15 @@ TAO_Notify_Tests_Peer_T<Peer_Traits>::status (ACE_ENV_SINGLE_ARG_DECL)
   ACE_CATCH(CORBA::TRANSIENT, ex)
     {
       ACE_PRINT_EXCEPTION (ex, "");
-      ACE_DEBUG ((LM_DEBUG, 
-                  "Peer %s is_equivalent transient exception.", 
+      ACE_DEBUG ((LM_DEBUG,
+                  "Peer %s is_equivalent transient exception.",
                   this->name_.c_str ()));
     }
   ACE_CATCHANY
     {
       ACE_PRINT_EXCEPTION (ACE_ANY_EXCEPTION, "");
-      ACE_DEBUG ((LM_DEBUG, 
-                  "Peer %s is_equivanent other exception.", 
+      ACE_DEBUG ((LM_DEBUG,
+                  "Peer %s is_equivanent other exception.",
                   this->name_.c_str ()));
     }
   ACE_ENDTRY;
@@ -189,7 +189,7 @@ TAO_Notify_Tests_Peer_T<Peer_Traits>::status (ACE_ENV_SINGLE_ARG_DECL)
 #endif /* TAO_HAS_MINIMUM_CORBA */
 }
 
-template <class Peer_Traits> 
+template <class Peer_Traits>
 void
 TAO_Notify_Tests_Peer_T<Peer_Traits>::disconnect (ACE_ENV_SINGLE_ARG_DECL)
 {
@@ -201,7 +201,7 @@ TAO_Notify_Tests_Peer_T<Peer_Traits>::disconnect (ACE_ENV_SINGLE_ARG_DECL)
   this->deactivate (ACE_ENV_SINGLE_ARG_PARAMETER);
 }
 
-template <class Peer_Traits> 
+template <class Peer_Traits>
 PortableServer::POA_ptr
 TAO_Notify_Tests_Peer_T<Peer_Traits>::_default_POA (
     ACE_ENV_SINGLE_ARG_DECL_NOT_USED
@@ -210,7 +210,7 @@ TAO_Notify_Tests_Peer_T<Peer_Traits>::_default_POA (
   return PortableServer::POA::_duplicate (this->default_POA_.in ());
 }
 
-template <class Peer_Traits> 
+template <class Peer_Traits>
 void
 TAO_Notify_Tests_Peer_T<Peer_Traits>::deactivate (ACE_ENV_SINGLE_ARG_DECL)
 {
